--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
     "expo": "^49.0.0",
     "expo-document-picker": "~11.5.4",
     "expo-firebase-core": "^6.0.0",
-    "expo-image-picker": "^14.7.1",
+    "expo-image-picker": "^14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.23.0",
     "link": "^2.1.0",
@@ -37,7 +39,8 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "expo-file-system": "~15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
