--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
     "react-navigation-stack": "^2.10.4",
-    "expo-file-system": "~15.4.5"
+    "expo-file-system": "~15.4.5",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
