--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.9",
@@ -19,8 +20,10 @@
     "axios": "^1.6.7",
     "expo": "^49.0.0",
     "expo-document-picker": "~11.5.4",
+    "expo-file-system": "~15.4.5",
     "expo-firebase-core": "^6.0.0",
     "expo-image-picker": "^14.3.2",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.23.0",
     "link": "^2.1.0",
@@ -29,7 +32,9 @@
     "react-native": "0.72.10",
     "react-native-calendars": "^1.1303.0",
     "react-native-document-picker": "^9.1.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-router-flux": "^3.45.0",
     "react-native-safe-area-context": "4.6.3",
@@ -39,9 +44,7 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
-    "react-navigation-stack": "^2.10.4",
-    "expo-file-system": "~15.4.5",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
