--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.19",
+    "@react-navigation/material-bottom-tabs": "^6.2.27",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@types/react": "~18.2.14",
     "axios": "^1.6.7",
     "expo": "^49.0.0",
     "expo-document-picker": "~11.5.4",
@@ -26,6 +30,7 @@
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.23.0",
+    "gsap": "^3.12.5",
     "link": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,6 +40,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-router-flux": "^3.45.0",
     "react-native-safe-area-context": "4.6.3",
@@ -44,7 +50,9 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "typescript": "^5.1.3",
+    "@react-native-masked-view/masked-view": "0.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
