--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.7",
     "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/material-bottom-tabs": "^6.2.27",
@@ -21,7 +23,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "expo": "^49.0.0",
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
@@ -30,6 +32,7 @@
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.23.0",
+    "graphql": "^15.8.0",
     "gsap": "^3.12.5",
     "link": "^2.1.0",
     "react": "18.2.0",
@@ -51,11 +54,15 @@
     "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
     "react-navigation-stack": "^2.10.4",
+    "styled-components": "^6.1.8",
     "typescript": "^5.1.3",
-    "@react-native-masked-view/masked-view": "0.2.9"
+    "expo-speech": "~11.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-loader": "^9.1.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^14.1.1"
   },
   "private": true
 }
