--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@types/react": "~18.2.14",
     "axios": "^1.6.8",
     "expo": "^49.0.0",
+    "expo-av": "^13.10.5",
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
     "expo-firebase-core": "^6.0.0",
     "expo-image-picker": "^14.3.2",
     "expo-location": "~16.1.0",
+    "expo-speech": "~11.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.23.0",
     "graphql": "^15.8.0",
@@ -53,10 +55,10 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^6.1.8",
-    "typescript": "^5.1.3",
-    "expo-speech": "~11.3.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
