--- a/package.json
+++ b/package.json
@@ -3,65 +3,76 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@apollo/client": "^3.9.7",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/vector-icons": "^14.0.3",
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.22.3",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@mapbox/polyline": "^1.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-masked-view/masked-view": "0.2.9",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
+    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/material-bottom-tabs": "^6.2.27",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
-    "@types/react": "~18.2.14",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
+    "@types/react": "~18.2.79",
     "axios": "^1.6.8",
-    "expo": "^49.0.0",
-    "expo-av": "^13.10.5",
-    "expo-document-picker": "~11.5.4",
-    "expo-file-system": "~15.4.5",
-    "expo-firebase-core": "^6.0.0",
-    "expo-image-picker": "^14.3.2",
-    "expo-location": "~16.1.0",
-    "expo-speech": "~11.3.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.36",
+    "expo-av": "~14.0.6",
+    "expo-constants": "^16.0.2",
+    "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
+    "expo-speech": "~12.0.2",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^9.23.0",
     "graphql": "^15.8.0",
     "gsap": "^3.12.5",
     "link": "^2.1.0",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "^0.74.5",
     "react-native-calendars": "^1.1303.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-confetti": "^0.1.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-document-picker": "^9.1.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-maps": "1.7.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "^1.14.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-router-flux": "^3.45.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "13.8.6",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^6.1.8",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "babel-loader": "^9.1.3",
     "node-sass": "^9.0.0",
     "sass-loader": "^14.1.1"
